--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,10 +1,9 @@
 nav.navbar.navbar-expand-lg.border-bottom.shadow-sm
   .container-fluid.header
-    = link_to root_path, class:"navbar-brand"
+    = link_to root_path, class:"navbar-brand" do
       = image_tag asset_path("bookmarks.png"),  :height => '60'
-    button.navbar-toggler type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
-      span.navbar-toggler-icon
-
+      button.navbar-toggler type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+        span.navbar-toggler-icon
 
     = form_with url: books_path, method: :get, local: true, class:"d-flex mr-auto" do |f|
       = f.text_field :keyword, required: true, class:"form-control-sm me-2"
@@ -24,7 +23,7 @@ nav.navbar.navbar-expand-lg.border-bottom.shadow-sm
               i.fas.fa-user.fa-fw
               span マイページ
             = link_to timelines_path, class:"dropdown-item" do
-              i.fas.fa-user.fa-fw
+              i.fa.fa-tasks
               span タイムライン
             = link_to book_ranking_path(genre: "", sort: "sales"), class:"dropdown-item pr-2" do
               i.fas.fa-crown.fa-fw
