--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -151,10 +151,10 @@ header{
 // user-showページ
 .user_show_readcomment{
   font-size:14px;
-
 }
 
-.user_show_btn{
+.user_show_btn,
+.book_show_btn{
   width:120px;
   height:70px;
   opacity: 50%;
@@ -163,48 +163,19 @@ header{
     background-color:#FFE100;
   }
 }
-.read_btn_active{
+
+// book-showページ
+.book_show_onbtn{
+  width:120px;
+  height:70px;
   opacity: 100%;
   background-color:#FFE100;
 }
-
-.book_show_readon{
-  background-color: #FFE100;
-  color:#5B5B5B;
-  &:hover{
-    background-color: #ffe51f;
-    color:#5B5B5B;
-  }
+// book-show-readモーダル
+.read_modal_header{
+  background-color:yellow;
 }
 
-.book_show_readoff{
-  background-color: #FEF298;
-  color:#5B5B5B;
-  opacity: 0.9;
-  &:hover{
-    background-color: #FFF6B3;
-    color:#5B5B5B;
-  }
-}
-
-.book_show_unreadon{
-  background-color: #FFE100;
-  color:#5B5B5B;
-  &:hover{
-    background-color: #ffe51f;
-    color:#5B5B5B;
-  }
-}
-
-.book_show_unreadoff{
-  background-color: #FEF298;
-  color:#5B5B5B;
-  opacity: 0.9;
-  &:hover{
-    background-color: #FFF6B3;
-    color:#5B5B5B;
-  }
-}
 
 // simple-calendar
 .simple-calendar {
