--- a/app/views/read_favorites/_favorite_btn.html.slim
+++ b/app/views/read_favorites/_favorite_btn.html.slim
@@ -1,9 +1,11 @@
 - if review.favorited_by?(current_user)
   span
-    = link_to book_book_read_read_favorites_path(review.book, review), method: :delete, remote: true do
-      i.fas.fa-heart #{review.read_favorites.count}いいね済
+    = link_to book_book_read_read_favorites_path(review.book, review), method: :delete, remote: true, class:"badge badge-pill badge-light pt-2" do
+      h6
+        span.text-danger ♥
+        span いいね#{review.read_favorites.count}
 
 - else
   span
-    = link_to book_book_read_read_favorites_path(review.book, review), method: :post, remote: true do
-      i.fas.fa-heart #{review.read_favorites.count}いいね
+    = link_to book_book_read_read_favorites_path(review.book, review), method: :post, remote: true, class:"badge badge-pill badge-light pt-2 text-secondary" do
+      h6 ♡いいね#{review.read_favorites.count}
