[fix] レイアウト修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -171,6 +171,10 @@ header{
   opacity: 100%;
   background-color:#FFE100;
 }
+.read_btn_active{
+  opacity: 100%;
+  background-color:#FFE100;
+}
 // book-show-readモーダル
 .read_modal_header{
   background-color:yellow;
