--- a/app/views/users/_follow.html.slim
+++ b/app/views/users/_follow.html.slim
@@ -25,7 +25,7 @@
           p.text-center
             = "#{follow_user.book_reads.count}"
         .flex-column.w-25.text-center
-          i.fas.fa-plus-square.fa-2x.text-dark
+          i.far.fa-plus-square.fa-2x.text-dark
           p.text-center
             = "#{follow_user.book_unreads.count}"
         .flex-column.w-25.text-center.mt-2
