--- a/app/views/users/_read.html.slim
+++ b/app/views/users/_read.html.slim
@@ -26,7 +26,7 @@
                 span.text-center
                   = "#{book_read.book.book_reads.count}"
               .btn.btn-light.align-items-end
-                i.fas.fa-plus-square.text-dark.pr-1
+                i.far.fa-plus-square.text-dark.pr-1
                 span.text-center
                   = "#{book_read.book.book_unreads.count}"
             small.align-self-end
