--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -39,8 +39,7 @@
 
             .d-block
               .btn.btn-light.user_show_btn#unread_btn
-                span
-                  i.fas.fa-plus-square.fa-2x
+                i.far.fa-plus-square.fa-2x
                 p.text-center
                   = "#{@book_unreads.count}"
 
