[fix] rankingページ-レイアウト修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -180,6 +180,12 @@ header{
   background-color:yellow;
 }
 
+// book-rankingページ
+.ranking_item_btn{
+  width: 80px;
+  height: 50px;
+}
+
 
 // simple-calendar
 .simple-calendar {
