--- a/app/views/notifications/_notification.html.slim
+++ b/app/views/notifications/_notification.html.slim
@@ -1,7 +1,7 @@
 - visitor = notification.visitor
 - visited = notification.visited
 
-.col-md-7.mx-auto.bg-white.mt-3
+.col-md-8.mx-auto.bg-white.mt-3
   .form-inline.py-2
     - case notification.action
 
@@ -22,7 +22,7 @@
 
     - when "favorite" then
       .d-flex.flex-row.bg-white.py-2
-        .flex-column
+        .flex-column.mb-5
           .d-flex.flex-row.mb-1
             = link_to user_path(visitor) do
               = attachment_image_tag visitor, :image, size: "50x50", fallback: "noimage.jpg", class: "rounded-circle"
@@ -35,8 +35,8 @@
             span さんが
             = link_to "#{notification.book.title}の投稿", book_book_read_path(notification.book_read.book_id,notification.book_read.id, user: visited), class:"text-info"
             | にいいねしました
-        = link_to book_path(notification.book.id), class:"ml-auto text-right", style:"width: 150px;" do
-          = image_tag(notification.book.image_url.chomp("?_ex=200x200"), :width => '60%')
+      = link_to book_path(notification.book.id), class:"ml-auto text-right", style:"width: 150px;" do
+        = image_tag(notification.book.image_url.chomp("?_ex=200x200"), :width => '60%')
 
     - when "comment" then
       .d-flex.flex-row.bg-white.py-2
@@ -59,13 +59,13 @@
               small
                 = link_to "続きを読む", book_book_read_path(notification.book_id, notification.book_read_id, user: notification.visitor)
 
-        = link_to book_path(notification.book.id), class:"ml-auto text-right", style:"width: 150px;" do
-          = image_tag(notification.book.image_url.chomp("?_ex=200x200"), :width => '60%')
+      = link_to book_path(notification.book.id), class:"ml-auto text-right", style:"width: 150px;" do
+        = image_tag(notification.book.image_url.chomp("?_ex=200x200"), :width => '60%')
 
 
     - when "release" then
       .d-flex.flex-row.bg-white
-        .flex-column.pb-4
+        .flex-column.pb-5
           .d-flex.flex-row.mb-1
             = link_to user_path(visitor) do
               = attachment_image_tag visitor, :image, size: "50x50", fallback: "noimage.jpg", class: "rounded-circle"
@@ -80,6 +80,3 @@
 
       = link_to book_path(notification.book.id), class:"ml-auto text-right", style:"width: 150px;" do
         = image_tag(notification.book.image_url.chomp("?_ex=200x200"), :width => '60%')
-
-  .small.text-muted.text-right.pb-2
-    = time_ago_in_words(notification.created_at).upcase
