--- a/app/views/timelines/index.html.slim
+++ b/app/views/timelines/index.html.slim
@@ -1,8 +1,9 @@
 .container
   .row
     .col-md-12
-      .bg-white.text-center.py-3
-        h3 タイムライン
+      .col-md-10.mx-auto
+        .bg-white.text-center.py-3
+          h3 タイムライン
 
       - if @timelines.present?
         = render "timeline", timelines: @timelines
