--- a/app/views/read_comments/destroy.js.erb
+++ b/app/views/read_comments/destroy.js.erb
@@ -1,1 +1,2 @@
-$("#book_read_comments").html("<%= j(render "book_reads/book_read_comments", book: @book, book_read: @book_read) %>");
+$("#book_read_comments").html("<%= j(render "book_reads/read_comments", book: @book, book_read: @book_read) %>");
+$("#comment_count").html("<%= j("#{@book_read.read_comments.count}") %>");
