--- a/app/views/users/_follow.html.slim
+++ b/app/views/users/_follow.html.slim
@@ -4,20 +4,14 @@
       .d-flex
         = link_to user_path(follow_user.id) do
           = attachment_image_tag follow_user, :image, :fill, 80, 80, fallback:"noimage.jpg", size: "80x80", class: "rounded-circle shadow-sm mr-4"
-        strong
-          = link_to follow_user.name, user_path(follow_user.id), class:"text-dark"
-
-        .flex-column
-          - unless follow_user == current_user
-            - if User.follow_include?(current_user, follow_user)
-              = link_to user_relationships_path(follow_user.id), method: :delete, local: true, class:"btn btn-sm btn-secondary align-items-center px-1 ml-4"
-                i.fas.fa-user-check.mx-1
-                span フォロー中
-
-            - else
-              = link_to user_relationships_path(follow_user.id), method: :post, local: true, class:"btn btn-sm btn-light btn-outline-secondary px-1 ml-4"
-                i.fas.fa-user-plus.mx-1
-                span フォロー
+        .d-flex.flex-column
+          strong.d-flex.flex-row
+            = link_to follow_user.name, user_path(follow_user.id), class:"text-dark mr-3"
+            - unless follow_user == current_user
+              .follow_ajax_btn
+                = render "relationships/follow_btn", user: follow_user
+          small.mt-3
+            = simple_format(follow_user.introduction.truncate(30))
 
       .d-flex.mt-3
         .flex-column.w-25.text-center
