--- a/app/views/users/_read.html.slim
+++ b/app/views/users/_read.html.slim
@@ -2,7 +2,7 @@
   .row
     - book_reads.each do |book_read|
       .col-md-6.h-100
-        .card.flex-md-row.mb-4.shadow-sm.h-md-250
+        .card.flex-md-row.mb-4.shadow.border.h-md-250
           .card-body.d-flex.flex-column.align-items-start.w-100
             strong = link_to book_read.book.title, book_path(book_read.book.id), class:"text-dark", local: true
             div id="rate_#{book_read.id}" class="my-1"
@@ -14,8 +14,8 @@
               = link_to book_read.book.publisher_name, books_path(author: book_read.book.publisher_name)
             p.mb-0.small
               = "発売日：#{book_read.book.sales_date}"
-            .mt-1
-              = book_read.comment.truncate(30)
+            small.mt-1
+              = simple_format(book_read.comment.truncate(30))
               - if book_read.comment.size > 30
                 small
                   = link_to "続きを読む", book_book_read_path(book_read.book_id,book_read, user: book_read.user_id)
@@ -29,10 +29,8 @@
                 i.far.fa-plus-square.text-dark.pr-1
                 span.text-center
                   = "#{book_read.book.book_unreads.count}"
-            small.align-self-end
-              = book_read.created_at.strftime('%Y/%m/%d')
 
-            .d-flex.flex-row.mt-4
+            .d-flex.flex-row.mt-auto
               span id="favorite_btn_#{book_read.id}"
                 = render "read_favorites/favorite_btn", review: book_read
 
@@ -40,6 +38,9 @@
                 h6
                   = link_to book_book_read_path(book_read.book_id, book_read.id, user: book_read.user_id), class:"text-secondary" do
                     i.fa.fa-comments コメント#{book_read.read_comments.count}
+
+            small.align-self-end
+              = book_read.created_at.strftime('%Y/%m/%d')
 
           = link_to book_path(book_read.book.id), local: true, class:"flex-auto text-right h-100" do
             = image_tag book_read.book.image_url.chomp("?_ex=200x200"), :width => '90%', class:"text-right"
