--- a/app/views/users/calender.html.slim
+++ b/app/views/users/calender.html.slim
@@ -1,20 +1,24 @@
-.container-fruid
-    .row
-        .col-md-3
-            h3 読みたいリスト
-            table.table.table-hover
+.container
+    .row.mt-3
+        .col-md-4.mt-5.pt-3
+            .bg-white.p-3.text-center
+                h5 読みたいリスト
+            table.table.table-hover.table-bordered.table-striped.callender_table_text
                 - @books.order(:sales_date).each do |book|
                     - if book.sales_date.present? && book.sales_date > Date.today-30
                         tr
-                            td = book.sales_date
-                            td = book.title
+                            td = book.sales_date.strftime('%Y/%m/%d')
+                            td = link_to book.title.truncate(20), book_path(book.id), class:"text-dark"
 
         .col-md-8
-            h3 発売カレンダー
+            .bg-white.p-3.text-center
+                h5 発売カレンダー
             = month_calendar(events: @books, attribute: :sales_date) do |date, books|
               = date.day
 
               - books.each do |book|
                 div
-                    = link_to book.title.truncate(30), book_path(book.id)
+                    = link_to book.title.truncate(10), book_path(book.id), class:"badge badge-info"
+
+
 
