--- a/app/views/users/calender.html.slim
+++ b/app/views/users/calender.html.slim
@@ -1,5 +1,5 @@
 .container
-    .row.mt-3
+    .row.mt-3.bg-light
         .col-md-4.mt-5.pt-3
             .bg-white.p-3.text-center
                 h5 読みたいリスト
