--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -19,7 +19,7 @@
 
             - else
               = link_to edit_user_path(current_user.id), local: true, class:"btn btn-outline-secondary px-3" do
-                i.fas.fa-cogs.mx-1
+                i.fas.fa-cog.mx-1
                 span プロフィール編集
         hr.mb-0.mt-5
         .row
