--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,59 +1,71 @@
-nav.navbar.navbar-expand-lg.border-bottom.shadow-sm
-  .container-fluid.header
-    = link_to root_path, class:"navbar-brand" do
-      = image_tag asset_path("bookmarks.png"),  :height => '60'
-      button.navbar-toggler type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
-        span.navbar-toggler-icon
 
-    = form_with url: books_path, method: :get, local: true, class:"d-flex mr-auto" do |f|
-      = f.text_field :keyword, required: true, class:"form-control-sm me-2"
-      = f.submit "検索", class:"btn btn-sm btn-secondary"
+nav.navbar.navbar-expand-lg.navbar-light.bg-light
+  = link_to root_path, class:"navbar-brand" do
+    = image_tag asset_path("bookmarks.png"),  :height => '60'
+  button.navbar-toggler type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+    span.navbar-toggler-icon
+  .collapse.navbar-collapse#navbarSupportedContent
 
-    ul.nav.nav-pills
+    = form_with url: books_path, method: :get, local: true, class:"form-inline my-2 my-lg-0" do |f|
+      = f.text_field :keyword, required: true, class:"form-control mr-sm-2"
+      = f.submit "検索", class:"btn btn-sm btn-secondary m-0 ml-sm-0"
+
+    ul.navbar-nav.ml-auto
       - if user_signed_in?
-        li.nav-item
-          = link_to "本を探す", books_path(keyword: "本", page: rand(1..100)), class:"nav-link header_find_book"
-        li.nav-item
-          = render "notifications/uncheck"
-        li.nav-item.dropdown.dropleft.mr-3
-          a.nav-link.dropdown-toggle data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"
-            i.fas.fa-user
-          .dropdown-menu
-            = link_to user_path(current_user.id), class:"dropdown-item" do
+        li.nav-item.active.mr-4
+          = link_to "本を探す", books_path(keyword: "本", page: rand(1..100)), class:"nav-link header_find_book px-3"
+        li.nav-item.active.mr-4
+          = link_to user_path(current_user.id), class:"nav-link" do
               i.fas.fa-user.fa-fw
-              span マイページ
-            = link_to timelines_path, class:"dropdown-item" do
-              i.fa.fa-tasks
-              span タイムライン
-            = link_to book_ranking_path(genre: "", sort: "sales"), class:"dropdown-item pr-2" do
-              i.fas.fa-crown.fa-fw
-              span  ランキング
-            = link_to user_calender_path(current_user.id), class:"dropdown-item pr-2" do
-              i.far.fa-calendar-alt.fa-fw
-              span  発売カレンダー
-            = link_to root_path, class:"dropdown-item pr-2" do
+              span  マイページ
+        li.nav-item.active.mr-4
+          = link_to timelines_path, class:"nav-link" do
+            i.fa.fa-tasks
+            span タイムライン
+        li.nav-item.active.mr-4
+          = link_to book_ranking_path(genre: "", sort: "sales"), class:"nav-link" do
+            i.fas.fa-crown.fa-fw
+            span  ランキング
+        li.nav-item.active.mr-4
+          = link_to user_calender_path(current_user.id), class:"nav-link" do
+            i.far.fa-calendar-alt.fa-fw
+            span  発売カレンダー
+        li.nav-item.active.mr-2
+          = render "notifications/uncheck"
+
+        li.nav-item.active.dropdown.dropleft
+          a.nav-link.dropdown-toggle#navbarDropdownMenuLink href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+             i.fas.fa-user.fa-fw
+
+          .dropdown-menu.shadow aria-labelledby="navbarDropdownMenuLink m-5"
+            = link_to user_path(current_user), class:"dropdown-item text-secondary" do
+              i.fas.fa-user.fa-fw
+              span  マイページ
+            = link_to edit_user_path(current_user), class:"dropdown-item text-secondary" do
+              i.fas.fa-cog.fa-fw
+              span  プロフィール編集
+            = link_to root_path, class:"dropdown-item text-secondary" do
               i.fas.fa-book-reader.fa-fw
               span  About
-            = link_to destroy_user_session_path, method: :delete, class:"dropdown-item pr-2" do
+            = link_to destroy_user_session_path, method: :delete, class:"dropdown-item text-secondary" do
               i.fas.fa-sign-out-alt.fa-fw
               span  ログアウト
 
+
       - else
-        li.nav-item
-          = link_to "本を探す", books_path(keyword: "本", page: rand(1..100)), class:"nav-link header_find_book"
-        li.nav-item.dropdown.dropleft.mr-3
-          a.nav-link.dropdown-toggle data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"
-            i.fas.fa-user
-          .dropdown-menu
-            = link_to root_path, class:"dropdown-item text-secondary pr-2" do
-              i.fas.fa-book-reader.fa-fw
-              span  About
-            = link_to book_ranking_path(genre: "", sort: "sales"), class:"dropdown-item text-secondary pr-2" do
-              i.fas.fa-crown.fa-fw
-              span  ランキング
-            = link_to new_user_session_path, class:"dropdown-item pr-2 text-secondary text-secondary" do
-              i.fas.fa-user.fa-fw
-              span  ログイン
-            = link_to new_user_registration_path, class:"dropdown-item text-secondary pr-2 " do
-              i.fas.fa-sign-out-alt.fa-fw
-              span  新規登録
+        li.nav-item.active.mr-4
+          = link_to root_path, class:"text-secondary" do
+            i.fas.fa-book-reader.fa-fw
+            span  About
+        li.nav-item.active.mr-4
+          = link_to book_ranking_path(genre: "", sort: "sales"), class:"text-secondary" do
+            i.fas.fa-crown.fa-fw
+            span  ランキング
+        li.nav-item.active.mr-4
+          = link_to new_user_session_path, class:"text-secondary" do
+            i.fas.fa-user.fa-fw
+            span  ログイン
+        li.nav-item.active.mr-4
+          = link_to new_user_registration_path, class:"text-secondary" do
+            i.fas.fa-sign-out-alt.fa-fw
+            span  新規登録
